cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_482.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3817: error: DEAD_STORE
  The value written to &kexch_alg (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3817:13: Write of unused value
3815.               break;
3816.           case 7:
3817.               kexch_alg = NID_ffdhe2048;
                    ^
3818.               break;
3819.           case 8:
